fix align

--- a/source/stylesheets/_service.sass
+++ b/source/stylesheets/_service.sass
@@ -13,6 +13,7 @@
 
   .wrapper
     padding: .75em 1em
+    text-align: center
 
   .notification
     padding: 2.5rem
